[package]
name = "macos-agent"
version = "0.2.11"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
screen-record = { path = "../screen-record" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
nils-test-support = { path = "../nils-test-support" }
tempfile = "3"
