[package]
name = "macos-agent"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
nils-common = { path = "../nils-common" }
screen-record = { path = "../screen-record" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
nils-test-support = { path = "../nils-test-support" }
tempfile = "3"
