[package]
name = "nils-memo-cli"
version = "0.3.7"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-memo-cli in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "memo_cli"
path = "src/lib.rs"

[[bin]]
name = "memo-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"
