[package]
name = "nils-common"
version = "0.4.2"
edition.workspace = true
license.workspace = true
description = "Library crate for nils-common in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[dependencies]

[dev-dependencies]
nils-test-support = { version = "0.4.2", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
