[package]
name = "nils-common"
version = "0.6.7"
edition.workspace = true
license.workspace = true
description = "Library crate for nils-common in the nils-cli workspace."
repository = "https://github.com/sympoies/nils-cli"

[dependencies]
base64 = "0.22"
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.6.7", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
