[package]
name = "nils-term"
version = "0.4.1"
edition.workspace = true
license.workspace = true
description = "Library crate for nils-term in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[dependencies]
indicatif = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
