[package]
name = "nils-test-support"
version = "0.3.5"
edition.workspace = true
license.workspace = true
publish = false

description = "Library crate for nils-test-support in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
pretty_assertions = { workspace = true }
