[package]
name = "nils-test-support"
version = "0.6.3"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-test-support in the nils-cli workspace."
repository = "https://github.com/sympoies/nils-cli"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
pretty_assertions = { workspace = true }
