[package]
name = "nils-plan-issue-cli"
version = "0.5.1"
edition.workspace = true
license.workspace = true
default-run = "plan-issue"

description = "CLI crate for nils-plan-issue-cli in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "plan_issue_cli"
path = "src/lib.rs"

[[bin]]
name = "plan-issue"
path = "src/main.rs"

[[bin]]
name = "plan-issue-local"
path = "src/bin/plan-issue-local.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.5.1", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
