[package]
name = "nils-plan-issue-cli"
version = "0.6.1"
edition.workspace = true
license.workspace = true
default-run = "plan-issue"

description = "CLI crate for nils-plan-issue-cli in the nils-cli workspace."
repository = "https://github.com/sympoies/nils-cli"

[lib]
name = "plan_issue_cli"
path = "src/lib.rs"

[[bin]]
name = "plan-issue"
path = "src/main.rs"

[[bin]]
name = "plan-issue-local"
path = "src/bin/plan-issue-local.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nils-common = { version = "0.6.1", path = "../nils-common", package = "nils-common" }
plan-tooling = { version = "0.6.1", path = "../plan-tooling", package = "nils-plan-tooling" }

[dev-dependencies]
nils-test-support = { version = "0.6.1", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
